src/test/deca/syntax/valid/synt/float_with_negative_exp_notation.deca
/*
    Description : Nombre flottant avec une notation exponentielle négative

    Résultat : OK
*/
{
    float x = 0.5E-5;
}
