src/test/deca/syntax/invalid/synt/overflow_positive_float.deca
// @expected_output deca:8:14:
/*
    Description : Initialisation d'un float avec une valeur trop grande

    Résultat : OK
*/
{
    float x = 450000000000000000000000000000000000000000000000000000000000.0;
}
